--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
   </div>
   <div class="content">
     <!-- Add a video element with the source of your video file -->
-    <video src="assets/Mv1.mp4" loop></video>
+    <video src="assets/Mv1.mp4" muted loop></video>
     <h1>Home</h1>
-    <p>Some content for Home...</p>
+    <p>.</p>
   </div>
 </body>
 </html>
