--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
       line-height: 30px;
     }
   </style>
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.7/css/all.css">
   <script>
     // Add your custom JavaScript code here
     window.addEventListener("DOMContentLoaded", function() {
