--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       left: 10px;
       color: white;
       cursor: pointer;
-      opacity: 0.5;
+      opacity: 0.8;
       transition: opacity 0.3s;
     }
 
@@ -132,7 +132,7 @@
       });
 
       // Get the sound icon element
-      var icon = document.querySelector(".sound-icon");
+      var icon = document.querySelector(".sound-icon i");
       // Add a click event listener to the icon element
       icon.addEventListener("click", function() {
         // Check the muted property of the video element
