--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       left: 10px;
       color: white;
       cursor: pointer;
-      opacity: 0.8;
+      opacity: 0.6;
       transition: opacity 0.3s;
     }
 
@@ -143,7 +143,7 @@
         } else {
           // If the video is not muted, mute it and change the icon class
           video.muted = true;
-          icon.className = "fa fa-volume-mute fa-5x";
+          icon.className = "fa fa-volume-xmark fa-5x";
         }
       });
     });
@@ -165,7 +165,7 @@
     <!-- Add a video element with the source of your video file -->
     <video src="assets/Mv1.mp4" muted loop></video>
     <h1>Home</h1>
-    <p></p>
+    <p>1</p>
   </div>
 </body>
 </html>
