--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         } else {
           // If the video is not muted, mute it and change the icon class
           video.muted = true;
-          icon.className = "fa fa-volume-xmark fa-5x";
+          icon.className = "fa-solid fa-volume-xmark fa-5x";
         }
       });
     });
@@ -160,7 +160,7 @@
   <div class="content">
     <!-- Add a div element with a sound icon inside -->
     <div class="sound-icon">
-      <i class="fa fa-volume-up fa-5x"></i>
+      <i class="fa-solid fa-volume-xmark fa-5x"></i>
     </div>
     <!-- Add a video element with the source of your video file -->
     <video src="assets/Mv1.mp4" muted loop></video>
