--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         } else {
           // If the video is not muted, mute it and change the icon class
           video.muted = true;
-          icon.className = "fa-solid fa-volume-xmark fa-5x";
+          icon.className = "fas fa-volume-mute fa-5x";
         }
       });
     });
@@ -160,12 +160,12 @@
   <div class="content">
     <!-- Add a div element with a sound icon inside -->
     <div class="sound-icon">
-      <i class="fa-solid fa-volume-xmark fa-5x"></i>
+      <i class="fas fa-volume-mute fa-5x"></i>
     </div>
     <!-- Add a video element with the source of your video file -->
     <video src="assets/Mv1.mp4" muted loop></video>
     <h1>Home</h1>
-    <p>1</p>
+    <p>2</p>
   </div>
 </body>
 </html>
