--- a/index.html
+++ b/index.html
@@ -99,7 +99,16 @@
           // Update the content based on the link href
           var href = this.getAttribute("href");
           var content = document.querySelector(".content");
-          content.innerHTML = "<h1>" + href + "</h1><p>Some content for " + href + "</p>";
+
+
+
+          if (href !='Home') content.innerHTML = "<h1>" + href + "</h1><p>Some content for " + href + "</p>";
+          else content.innerHTML = `<div class="sound-icon">
+      <i class="fa fa-volume-up fa-5x"></i>
+    <video src="assets/Mv1.mp4" muted loop></video>
+    <h1>Home</h1>
+    <p></p>`
+          
         });
       }
 
@@ -139,11 +148,11 @@
         if (video.muted) {
           // If the video is muted, unmute it and change the icon class
           video.muted = false;
-          icon.className = "fa fa-volume-up fa-5x";
+          icon.className = "fa fa-volume-up fa-3x";
         } else {
           // If the video is not muted, mute it and change the icon class
           video.muted = true;
-          icon.className = "fas fa-volume-mute fa-5x";
+          icon.className = "fa fa-volume-up fa-5x";
         }
       });
     });
@@ -160,12 +169,12 @@
   <div class="content">
     <!-- Add a div element with a sound icon inside -->
     <div class="sound-icon">
-      <i class="fas fa-volume-mute fa-5x"></i>
+      <i class="fa fa-volume-up fa-5x"></i>
     </div>
     <!-- Add a video element with the source of your video file -->
     <video src="assets/Mv1.mp4" muted loop></video>
     <h1>Home</h1>
-    <p>2</p>
+    <p></p>
   </div>
 </body>
 </html>
