--- a/index.html
+++ b/index.html
@@ -60,13 +60,15 @@
     /* Style the sound icon element to position it at the top left corner and make it clickable */
     .sound-icon {
       position: absolute;
-      top: 10px;
+      top: 50px;
       left: 10px;
       color: white;
       cursor: pointer;
-      opacity: 0.6;
       transition: opacity 0.3s;
     }
+
+    .son{ opacity: 0.8 }
+    .soff{opacity: 0.5 }
 
     .sound-icon:hover {
       opacity: 1;
@@ -102,7 +104,7 @@
 
 
 
-          if (href !='Home') content.innerHTML = "<h1>" + href + "</h1><p>Some content for " + href + "</p>";
+          if (href !='Home') content.innerHTML = "<h1>" + href + "</h1><p>Some 1 content for " + href + "</p>";
           else content.innerHTML = `<div class="sound-icon">
       <i class="fa fa-volume-up fa-5x"></i>
     <video src="assets/Mv1.mp4" muted loop></video>
@@ -148,11 +150,11 @@
         if (video.muted) {
           // If the video is muted, unmute it and change the icon class
           video.muted = false;
-          icon.className = "fa fa-volume-up fa-3x";
+          icon.className = "fa fa-volume-up fa-3x son";
         } else {
           // If the video is not muted, mute it and change the icon class
           video.muted = true;
-          icon.className = "fa fa-volume-up fa-5x";
+          icon.className = "fa fa-volume-up fa-5x soff";
         }
       });
     });
@@ -169,7 +171,7 @@
   <div class="content">
     <!-- Add a div element with a sound icon inside -->
     <div class="sound-icon">
-      <i class="fa fa-volume-up fa-5x"></i>
+      <i class="fa fa-volume-up fa-5x soff"></i>
     </div>
     <!-- Add a video element with the source of your video file -->
     <video src="assets/Mv1.mp4" muted loop></video>
