--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
       padding: 20px;
     }
 
+    .hide{display:none}
+
     /* Style the video element to fill the screen and hide the controls */
     .content video {
       position: fixed;
@@ -60,7 +62,7 @@
     /* Style the sound icon element to position it at the top left corner and make it clickable */
     .sound-icon {
       position: absolute;
-      top: 50px;
+      top: 100px;
       left: 10px;
       color: white;
       cursor: pointer;
@@ -101,15 +103,18 @@
           // Update the content based on the link href
           var href = this.getAttribute("href");
           var content = document.querySelector(".content");
+          var other = document.querySelector(".other");
 
 
-
-          if (href !='Home') content.innerHTML = "<h1>" + href + "</h1><p>Some 1 content for " + href + "</p>";
-          else content.innerHTML = `<div class="sound-icon">
-      <i class="fa fa-volume-up fa-5x"></i>
-    <video src="assets/Mv1.mp4" muted loop></video>
-    <h1>Home</h1>
-    <p></p>`
+          if (href !='Home') {
+            content.className = "content hide";
+            other.className = "other";
+            other.innerHTML = "<h1>" + href + "</h1><p>Some 1 content for " + href + "</p>";
+          }else {
+            content.className = "content";
+            other.className = "other hide";
+            //video.muted=false;
+          }
           
         });
       }
@@ -169,6 +174,16 @@
     <a href="About">About</a>
   </div>
   <div class="content">
+    <!-- Add a div element with a sound icon inside -->
+    <div class="sound-icon">
+      <i class="fa fa-volume-up fa-5x soff"></i>
+    </div>
+    <!-- Add a video element with the source of your video file -->
+    <video src="assets/Mv1.mp4" muted loop></video>
+    <h1>Home</h1>
+    <p></p>
+  </div>
+  <div class="other">
     <!-- Add a div element with a sound icon inside -->
     <div class="sound-icon">
       <i class="fa fa-volume-up fa-5x soff"></i>
