--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           if (href !='Home') {
             content.className = "content hide";
             other.className = "other";
-            other.innerHTML = "<h1>" + href + "</h1><p>Some 1 content for " + href + "</p>";
+            other.innerHTML = "<h1>" + href + "</h1><p>Some content for " + href + " 2</p>";
           }else {
             content.className = "content";
             other.className = "other hide";
@@ -183,14 +183,7 @@
     <h1>Home</h1>
     <p></p>
   </div>
-  <div class="other">
-    <!-- Add a div element with a sound icon inside -->
-    <div class="sound-icon">
-      <i class="fa fa-volume-up fa-5x soff"></i>
-    </div>
-    <!-- Add a video element with the source of your video file -->
-    <video src="assets/Mv1.mp4" muted loop></video>
-    <h1>Home</h1>
+  <div class="other hide">
     <p></p>
   </div>
 </body>
