--- a/e/index.html
+++ b/e/index.html
@@ -4,7 +4,7 @@
   iframe{resize:vertical;min-height:350px;height:50%;border:2px solid;width:100%;}button{width:98%;display:block;}
   section{float:left;width:5%;transition:width 0.5s ease;height:100vh;}
   section:focus-within, .lf{width:90%;}section:not(:focus-within):not(.lf){width:5%;}
-  .meditor{height:calc(100% - 50px);font-size: 16px;} /* Adjusting for button height */
+  .meditor{height:calc(100% - 50px);}.meditor * {font-size:16px;}
  </style>
  <script src="https://cdn.jsdelivr.net/npm/eruda"></script><script>eruda.init();eruda.position({ x: -20, y: -20 })</script>
  <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.33.0/min/vs/loader.min.js"></script>
