--- a/q/index.html
+++ b/q/index.html
@@ -18,9 +18,8 @@ body{font-family:Arial,sans-serif}#goal-display{position:fixed;top:10px;right:10
 <div id="goal-display"></div>
 <div id="entry-list"></div>
 <div id="main-view">
-<button id="add-entry">Add Entry</button>
-<canvas id="progress-gauge"></canvas>
-<canvas id="progress-line-chart"></canvas>
+ <button id="add-entry">Add Entry</button>
+ <div style="display:flex"><canvas id="progress-gauge"></canvas><canvas id="progress-line-chart"></canvas></div>
 </div>
 <div id="dialog-form" title="Add Goal / Add Entry">
 <form>
