--- a/q/index.html
+++ b/q/index.html
@@ -6,7 +6,7 @@
 <title>qTracker</title>
 <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.1/themes/base/jquery-ui.css">
 <style>
-body{font-family:Arial,sans-serif}#goal-display{position:fixed;top:10px;right:10px;font-size:14px}#goal-display a{cursor:pointer;color:blue;text-decoration:underline}#entry-list{position:fixed;top:50px;right:10px;font-size:12px}#main-view{margin:20px}#dialog-form{display:none}.ui-dialog-buttonset button.add-new{float:left}.ui-dialog-buttonset button.delete-entry{float:left}.ui-dialog-buttonset button.wipe-data{float:left}#import-file{display:none}#links{position:fixed;top:10px;left:10px;font-size:14px}#links a{cursor:pointer;color:blue;text-decoration:underline;margin-right:10px}#add-entry{display:none;margin-top:10px}#progress-gauge,#progress-line-chart{margin-top:20px;width:100%;max-width:400px;max-height:300px} @media (max-width: 768px) { .ui-dialog{top:20px !important} }
+body{font-family:Arial,sans-serif}#goal-display{position:fixed;top:10px;right:10px;font-size:14px}#goal-display a{cursor:pointer;color:blue;text-decoration:underline}#entry-list{position:fixed;top:50px;right:10px;font-size:12px}#main-view{margin:20px}#dialog-form{display:none}.ui-dialog-buttonset button.add-new{float:left}.ui-dialog-buttonset button.delete-entry{float:left}.ui-dialog-buttonset button.wipe-data{float:left}#import-file{display:none}#links{position:fixed;top:10px;left:10px;font-size:14px}#links a{cursor:pointer;color:blue;text-decoration:underline;margin-right:10px}#add-entry{display:none;margin-top:10px}#charts-container{display:flex;flex-wrap:wrap;justify-content:space-around;margin-top:20px;width:100%}#progress-gauge,#progress-line-chart{flex:1 1 45%;max-width:400px;max-height:300px}@media (max-width:768px){.ui-dialog{top:20px!important}}
 </style>
 </head>
 <body>
@@ -18,8 +18,11 @@ body{font-family:Arial,sans-serif}#goal-display{position:fixed;top:10px;right:10
 <div id="goal-display"></div>
 <div id="entry-list"></div>
 <div id="main-view">
- <button id="add-entry">Add Entry</button>
- <div style="display:flex"><canvas id="progress-gauge"></canvas><canvas id="progress-line-chart"></canvas></div>
+<button id="add-entry">Add Entry</button>
+<div id="charts-container">
+<canvas id="progress-gauge"></canvas>
+<canvas id="progress-line-chart"></canvas>
+</div>
 </div>
 <div id="dialog-form" title="Add Goal / Add Entry">
 <form>
@@ -32,10 +35,7 @@ body{font-family:Arial,sans-serif}#goal-display{position:fixed;top:10px;right:10
 <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script>
-// **DECLARE
 var qtk=localStorage.qtk?JSON.parse(localStorage.qtk):null,editingIndex=null,editingGoal=false;
-// **END DECLARE
-// **FUNCTIONS
 function saveQtk(){localStorage.qtk=JSON.stringify(qtk)}
 function updateGoalDisplay(){
 if(qtk&&qtk.goal){$('#goal-display').html(`Goal: ${qtk.goal.name} (${qtk.goal.number}) by ${qtk.goal.date} <a onclick="openGoalForm(true)">edit</a>`);$('#add-entry').show();showEntries();updateCharts()}
@@ -66,14 +66,61 @@ try{
 let data=JSON.parse(e.target.result);qtk=data;saveQtk();updateGoalDisplay();location.reload()}
 catch(error){alert('Invalid JSON file')}}
 reader.readAsText(file)}
-// Chart.js functions
 function updateCharts(){
-if(!qtk||!qtk.goal||!qtk.entries)return;let totalProgress=qtk.entries.reduce((sum,entry)=>sum+parseFloat(entry.number),0);let goalNumber=parseFloat(qtk.goal.number);let progressPercentage=(totalProgress/goalNumber)*100;createGauge(progressPercentage);createLineChart()}
+if(!qtk||!qtk.goal||!qtk.entries)return;
+let totalProgress=qtk.entries.reduce((sum,entry)=>sum+parseFloat(entry.number),0);
+let goalNumber=parseFloat(qtk.goal.number);
+let progressPercentage=(totalProgress/goalNumber)*100;
+createGauge(progressPercentage);
+createLineChart()}
 function createGauge(progressPercentage){
 let ctx=document.getElementById('progress-gauge').getContext('2d');if(window.gaugeChart)window.gaugeChart.destroy();window.gaugeChart=new Chart(ctx,{type:'doughnut',data:{labels:['Progress','Remaining'],datasets:[{data:[progressPercentage,100-progressPercentage],backgroundColor:['#4caf50','#d32f2f'],borderWidth:1}]},options:{responsive:true,cutout:'70%',plugins:{tooltip:{enabled:false},doughnutlabel:{labels:[{text:`${Math.round(progressPercentage)}%`,font:{size:'20'}}]}}}})
 }
 function createLineChart(){
-let ctx=document.getElementById('progress-line-chart').getContext('2d');if(window.lineChart)window.lineChart.destroy();let dates=qtk.entries.map(entry=>entry.date);let numbers=qtk.entries.map(entry=>parseFloat(entry.number));let cumulativeNumbers=[];numbers.reduce((a,b,i)=>(cumulativeNumbers[i]=a+b,a+b),0);let avgRate=cumulativeNumbers[cumulativeNumbers.length-1]/cumulativeNumbers.length;let goalNumber=parseFloat(qtk.goal.number);let goalDate=new Date(qtk.goal.date);let currentDate=new Date();let projectedDates=[];let projectedProgress=[];for(let d=new Date(currentDate);d<=goalDate;d.setDate(d.getDate()+1)){projectedDates.push(new Date(d).toLocaleDateString('en-GB',{day:'2-digit',month:'short',year:'numeric'}));projectedProgress.push(avgRate*(projectedDates.length-1))}window.lineChart=new Chart(ctx,{type:'line',data:{labels:dates.concat(projectedDates),datasets:[{label:'Actual Progress',data:cumulativeNumbers,borderColor:'#4caf50',fill:false},{label:'Projected Progress',data:cumulativeNumbers.concat(projectedProgress),borderColor:'#ff9800',fill:false,dash:[5,5]}]},options:{responsive:true,scales:{x:{display:true},y:{display:true}}}})
+let ctx=document.getElementById('progress-line-chart').getContext('2d');if(window.lineChart)window.lineChart.destroy();
+let dates=qtk.entries.map(entry=>new Date(entry.date));
+let numbers=qtk.entries.map(entry=>parseFloat(entry.number));
+let cumulativeNumbers=[];numbers.reduce((a,b,i)=>(cumulativeNumbers[i]=a+b,a+b),0);
+let goalNumber=parseFloat(qtk.goal.number);
+let goalDate=new Date(qtk.goal.date);
+let startDate=new Date(dates[0]);
+let totalDays=(goalDate-startDate)/(1000*60*60*24);
+let step=Math.ceil(totalDays/20);
+let allDates=[];
+for(let d=new Date(startDate);d<=goalDate;d.setDate(d.getDate()+step)){
+allDates.push(new Date(d));
+}
+dates.forEach(d=>{if(!allDates.includes(d)){allDates.push(d)}});
+allDates.sort((a,b)=>a-b);
+allDates=allDates.map(date=>date.toLocaleDateString('en-GB',{day:'2-digit',month:'short',year:'numeric'}));
+let extendedActualProgress=new Array(allDates.length).fill(null);
+dates.map(date=>date.toLocaleDateString('en-GB',{day:'2-digit',month:'short',year:'numeric'})).forEach((date,i)=>{
+let index=allDates.indexOf(date);
+if(index!==-1){
+extendedActualProgress[index]=cumulativeNumbers[i];
+}
+});
+let lastValue=0;
+extendedActualProgress=extendedActualProgress.map(value=>{
+if(value===null)return lastValue;
+lastValue=value;
+return value;
+});
+let projectedProgress=new Array(allDates.length).fill(0);
+let stepValue=goalNumber/(projectedProgress.length-1);
+for(let i=1;i<projectedProgress.length;i++){
+projectedProgress[i]=stepValue*i;
+}
+window.lineChart=new Chart(ctx,{
+type:'line',
+data:{
+labels:allDates,
+datasets:[
+{label:'Actual Progress',data:extendedActualProgress,borderColor:'#4caf50',fill:false},
+{label:'Projected Progress',data:projectedProgress,borderColor:'#ff9800',fill:false,borderDash:[5,5]}
+]},
+options:{responsive:true,scales:{x:{display:true},y:{display:true}}}
+});
 }
 $(function(){
 $('#date').datepicker({dateFormat:'dd-M-yy'});$('#dialog-form').dialog({autoOpen:false,modal:true,buttons:[
@@ -97,7 +144,6 @@ if(!qtk||!qtk.goal.name){openGoalForm(false)}else{updateGoalDisplay()}
 $('#add-entry').click(()=>{openEntryForm()})
 $('#export-data').click(exportData);$('#import-data').click(()=>$('#import-file').click());$('#import-file').change(importData)
 })
-// **END FUNCTIONS
 </script>
 </body>
 </html>
