--- a/t5/index.html
+++ b/t5/index.html
@@ -338,7 +338,7 @@ Margin-bottom:50%;
         entryDiv.innerHTML = `
           <div>
             <strong>${entry.name}</strong> (Rating: ${entry.rating})
-            <p>${entry.desc}</p>
+            <span>${entry.desc}</span>
           </div>
           <div>
             <button class="edit-btn" onclick="showEditEntryPopup(${listIndex}, ${entryIndex})">✏️</button>
