--- a/d/index.html
+++ b/d/index.html
@@ -12,7 +12,8 @@ canvas {border: 1px solid #ccc; display: block; margin: 10px auto;}
 #tools button{background:#2c3e50;color:white;box-shadow:0 4px 6px rgba(0,0,0,0.1);} 
 #tools button:hover{background:#34495e;transform:translateY(-2px);} 
 #tools button.active{background:#1abc9c;color:white;}
-#tools input[type="color"]{padding:0;width:40px;height:40px;border-radius:50%;border:2px solid #2c3e50;cursor:pointer;} 
+#tools input[type="color"]{padding:0;width:40px;height:40px;border-radius:50%;border:2px solid #2c3e50;cursor:pointer;}
+#tools input[type="checkbox"]{margin-top:-24px;}
   
 #layers-panel {border: 1px solid #000; padding: 10px; width: 200px;}
 #color-picker, #fill-checkbox {margin: 5px;}
