--- a/d/index.html
+++ b/d/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Image Editor</title>
 <style>
-canvas {border: 1px solid #ccc; display: block; margin: 10px auto;}
+canvas {border: 1px solid #ccc; display: block; margin: auto; margin-top: -200px}
 #tools, #layers-panel {margin-bottom: 15px;}
 
 #tools{display:flex;flex-wrap:wrap;gap:10px;} 
