--- a/d/index.html
+++ b/d/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Image Editor</title>
 <style>
-canvas {border: 1px solid #ccc; display: block; margin: auto; margin-top: -200px}
+canvas {border: 1px solid #ccc; display: block; position: fixed; left: 250px; top: 60px}
 #tools, #layers-panel {margin-bottom: 15px;}
   
 #layers-panel {border: 1px solid #000; padding: 10px; width: 200px;}
@@ -37,7 +37,7 @@ ul#layer-list li button {position: absolute; right: 5px; top: 5px;}
   <ul id="layer-list"></ul>
 </div>
 
-<canvas id="editor" width="800" height="600"></canvas>
+<canvas id="editor" width="1200" height="800"></canvas>
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
