--- a/index.html
+++ b/index.html
@@ -111,12 +111,13 @@
             other.className = "other";
             other.innerHTML = "<h1>" + href + "</h1><p><a href='/m/'>Mobile HTML / JS editor</a> - Similar to jsfiddle/jsbin etc.</p>"
                                             +      "<p><a href='/m/'>Desktop HTML / JS editor</a>  - Similar to jsfiddle/jsbin etc.</p>"
-                                            +      "<p><a href='/s/'>AI created</a> - Snake Game.</p>";
+                                            +      "<p><a href='/gms/s/'>AI created</a> - Snake Game.</p>";
           else if (href =='Experiments') {
 
             content.className = "content hide";
             other.className = "other";
-            other.innerHTML = "<h1>" + href + "</h1><p><a href='/d/'>Paste and Draw</a> - fast edit an image on a mac: mostly AI created</p>";
+            other.innerHTML = "<h1>" + href + "</h1><p><a href='/d/'>Paste and Draw</a> - fast edit an image on a mac: mostly AI created</p>"
+                                            +      "<p><a href='/s/'>AI created</a> - Goal App.</p>";
           else if (href =='About') {
             content.className = "content hide";
             other.className = "other";
